basic landing page and few updates

--- a/client/src/components/css/Navbar.css
+++ b/client/src/components/css/Navbar.css
@@ -25,5 +25,5 @@
   padding: calc(50px - 2%) calc(50px - 1%);
   font-size: 1.5em;
   font-weight: 400;
-  color: black;
+  color: rgba(64, 104, 45, 0.747);
 }
