--- a/client/src/components/css/LandingPage.css
+++ b/client/src/components/css/LandingPage.css
@@ -2,6 +2,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-repeat: no-repeat;
+  /* background-image: url('../../image/stiimage1.jpg'); */
+  background-position: center;
+  color: rgba(64, 104, 45, 0.747);
 }
 
 .landing-header {
