--- a/client/src/components/css/AboutMe.css
+++ b/client/src/components/css/AboutMe.css
@@ -21,11 +21,15 @@
 }
 
 .about-me-header {
-  margin-top: 30px;
+  margin-bottom: 30px;
   font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
   font-size: 40px;
 }
 
 .about-me-description {
   margin: 10px 50px;
+  font-size: 20px;
+}
+.about-me-font-description {
+  color: black;
 }
