--- a/client/src/components/css/Projects.css
+++ b/client/src/components/css/Projects.css
@@ -1,17 +1,60 @@
+.projects-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: rgba(64, 104, 45, 0.747);
+}
 .projects-header {
-  text-align: center;
+  color: rgba(64, 104, 45, 0.747);
   font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
   margin-top: 2.5%;
   font-size: 50px;
   margin-bottom: 1%;
-  color: rgba(64, 104, 45, 0.747);
 }
-
-.projects-container {
-  display: flex;
+.projects-header-description {
+  font-family: 'Raleway', Helvetica, Arial, sans-serif;
+  font-size: 20px;
+  color: grey;
+  text-align: center;
 }
 
 .projects-items {
   flex: 1 1;
   text-align: center;
+  margin-top: 30px;
+  display: flex;
+}
+
+.project-item-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 700;
+  font-size: 30px;
+  margin: 0 50px;
+}
+.project-item-title {
+  color: rgba(0, 59, 136, 0.747);
+  /* margin-bottom:  */
+}
+
+.project-item-description {
+  font-weight: 400;
+  font-size: 15px;
+  color: rgba(22, 25, 29, 0.747);
+
+  margin-bottom: 10px;
+}
+
+.project-item-list {
+  color: rgba(23, 25, 27, 0.747);
+  font-size: 13px;
+  margin-bottom: 3px;
+}
+
+.image-items {
+  width: 550px;
+  height: 300px;
+  margin-left: 15px;
 }
